Fixed spacing between time window shift buttons and time axis. Added ability to create new habits and add to tracker.

--- a/src/css/Custom.css
+++ b/src/css/Custom.css
@@ -30,7 +30,7 @@
 }
 
 .axis-row {
-    padding: .5em 0 0 .5em; 
+    padding: .5em .5em 0 .5em; 
 }
 
 .shift-control {
@@ -48,7 +48,7 @@
 
 .habit-table-viz-grid {
     padding-top: .2em; 
-    padding-left: .5em;
+    padding-left: .2em;
 }
 
 /* .habit-row-viz {
